--- a/www/assets/css/scss/_welcome.scss
+++ b/www/assets/css/scss/_welcome.scss
@@ -595,6 +595,7 @@
         }
         .private-sale-txt {
             line-height: 43px;
+            text-align: center;
         }
         .sub-message-container {
             margin-top: 0px;
